Fixing visibility issues fix that VariableBox was always visible

--- a/project/project.css
+++ b/project/project.css
@@ -83,6 +83,10 @@ font-size: 1.5em;
     z-index: 6; /* Screen 2 is below screen 1 */
     width: 100%;
     height: 100vh; /* Full height of the viewport */
+
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+
+    opacity: 0;
 }
 
 #project_container{
